--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,20 @@ body {
   align-items: center;
 }
 
+.rodape {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 25px; /* Ajuste conforme necessário */
+  background-color: var(--cor-principal);
+  color: var(--cor-texto);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  overflow: hidden;
+}
+
 .retangulo-branco {
   background-color: #ffffff;
   width: 139px;
@@ -84,8 +98,8 @@ body {
   padding: 20px;
   color: var(--cor-principal);
   position: absolute;
-  top: 50%;
-  left: 00px;
+  top: 65%; /* Ajuste o valor para mover para baixo */
+  left: 0;
   right: 0;
   transform: translateY(-50%);
 }
@@ -105,7 +119,7 @@ body {
 .container-eclipses {
   display: flex;
   justify-content: center;
-  margin-top: 180px;
+  margin-top: 45px;
 }
 
 .eclipse,
@@ -129,7 +143,7 @@ body {
 
 .eclipse p,
 .eclipsepessoa p {
-  margin-top: 10px;
+  margin-top: 50px;
 }
 
 .eclipse:hover,
@@ -139,7 +153,7 @@ body {
 
 .botoes-container {
   text-align: center;
-  margin-top: 80px;
+  margin-top: -150px;
 }
 
 .botao {
@@ -185,19 +199,7 @@ body {
   }
 }
 
-.rodape {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background-color: var(--cor-principal);
-  color: var(--cor-texto);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  overflow: hidden;
-}
+
 
 .rodape-textos {
   display: flex;
@@ -215,11 +217,11 @@ body {
   justify-content: flex-start;
   align-items: center;
   height: calc(100vh - 94px);
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 .sobre-pessoa {
-  margin-top: -570px;
+  margin-top: 20px; /* Ajuste conforme necessário */
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -231,16 +233,16 @@ body {
   line-height: 1.8;
   font-family: 'League Spartan', sans-serif;
   font-weight: normal;
-  margin: -65px 0;
+  margin: -350px 0 10px; /* Ajuste a margem superior conforme necessário */
   max-width: 80%;
-  white-space: nowrap;
+  white-space: normal;
   overflow: hidden;
 }
-
 .emojis-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10px; /* Ajuste conforme necessário */
 }
 
 .emoji {
