--- a/src/App.css
+++ b/src/App.css
@@ -245,8 +245,11 @@ body {
 }
 
 .botoes-container {
+  position: fixed;
+  top: 0px;
+  right: 825px;
   text-align: center;
-  margin-top: -150px;
+  margin-top: 780px;
 }
 
 .botao {
@@ -314,7 +317,7 @@ body {
 }
 
 .sobre-pessoa {
-  margin-top: 20px; /* Ajuste conforme necessário */
+  margin-top: -110px; /* Ajuste conforme necessário */
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
