--- a/src/App.css
+++ b/src/App.css
@@ -201,7 +201,8 @@ body {
 
 @media only screen and (max-width: 480px) {
   .titulo-equipe {
-    margin: 150vw 0 3vw; 
+    margin: 150vw 0 3vw;
+    top: 25%; 
   }
 
   .segundo-paragrafo {
@@ -272,8 +273,8 @@ body {
 
   .eclipse,
   .eclipsepessoa {
-    width: 20vw; 
-    height: 20vw; 
+    width: 200px; 
+    height: 200px; 
     margin-right: 2vw; 
   }
 
@@ -332,7 +333,9 @@ body {
   .botoes-container {
     display: flex;
     flex-direction: row; 
-    align-items: center; 
+    align-items: center;
+    margin-left: 40; 
+    width: 150%; 
   }
   
   .botao {
